@@ -1,5 +1,9 @@
 2002-08-29  John Levon  <levon@movementarian.org>
 
+	* QInclude.C: remove some wrong code removed from xforms
+ 
+2002-08-29  John Levon  <levon@movementarian.org>
+
 	* qfont_metrics.C: add per char ascent/descent
  
 2002-08-28  John Levon  <levon@movementarian.org>
